# contador-pessoas

./: .gitignore  README.md  config.yaml  pyproject.toml
app/: main.py
app/api/: app.py
app/api/routes/: cameras.py  reports.py  ws.py
app/core/: __init__.py  config.py  detector.py  logging.py
app/db/: models.py  repository.py  session.py
app/services/: counter.py  manager.py
app/sources/: base.py  file.py  rtsp.py  usb.py
app/tasks/: scheduler.py
frontend/: index.html
frontend/assets/: app.js  style.css
models/: bytetrack_custom.yaml
scripts/: download_model.py
tests/: reproduce_issue.py
tests/unit/: test_counter.py
